tools/tests/errors/surf_arity_05.experr
argument 'x' must be Float, got Bool
